[Omnibox] fix for trailing whitespace on "test" and "example"

This CL suggests that the words "test" and "example" be treated as
QUERY regardless of whether whitespace is present (e.g. "test ").

Without this CL something like "test " (with a trailing space) will be
UNKNOWN, which may be treated as a URL or QUERY (it's not explicit --
this CL makes it explicit).

Bug: 818137
Change-Id: Iedaa4e3c06782a9d9131d3e91d3cee87c1dee7ab
Reviewed-on: https://chromium-review.googlesource.com/950235
Commit-Queue: Dave Schuyler <dschuyler@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541650}
Former-commit-id: 7b840bc911107d6e3ee0e00e127ef076340d872a